Set up database

--- a/our-place-backend/appsettings.json
+++ b/our-place-backend/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "HTTPS_PORT": "5110"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=mydatabase;Username=admin;Password=admin"
+  }
 }
